# athena2

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  DECISIONS.md  README_ATHENA2.md  RESEARCH.md  pyproject.toml
cases/: gdp-milano-17928-2025.yaml
cases/validation/: ch-1040.yaml  ch-1124.yaml  ch-1146.yaml  ch-1187.yaml  ch-1253.yaml  ch-1272.yaml  ch-1291.yaml  ch-1295.yaml  ch-1886.yaml  ch-2046.yaml  ch-2057.yaml  ch-2079.yaml  ch-2165.yaml  ch-2195.yaml  ch-2210.yaml  ch-2344.yaml  ch-2358.yaml  ch-2434.yaml  ch-2435.yaml  ch-2461.yaml  ch-247.yaml  ch-2873.yaml  ch-2874.yaml  ch-2997.yaml  ch-3046.yaml  ch-3295.yaml  ch-3408.yaml  ch-3425.yaml  ch-3452.yaml  ch-3580.yaml  ch-571.yaml  ch-622.yaml  ch-741.yaml  ch-890.yaml
configs/: data.yaml  training.yaml
data/reports/: eda_report.md
docs/: ATHENA2-STATUS-REPORT-2026-03-16.md  athena-status-report-2026-03-12.md  validation-35cases-analysis.md
docs/plans/: 2026-03-09-athena-poc-design.md  2026-03-09-athena-poc-implementation.md  2026-03-09-design-decisions-log.md  2026-03-10-llm-robustness-layer.md
docs/superpowers/plans/: 2026-03-15-athena2-execution.md
ground_truth/: ch-1040.json  ch-1124.json  ch-1146.json  ch-1187.json  ch-1253.json  ch-1272.json  ch-1291.json  ch-1295.json  ch-1886.json  ch-2046.json  ch-2057.json  ch-2079.json  ch-2165.json  ch-2195.json  ch-2210.json  ch-2344.json  ch-2358.json  ch-2434.json  ch-2435.json  ch-2461.json  ch-247.json  ch-2873.json  ch-2874.json  ch-2997.json  ch-3046.json  ch-3295.json  ch-3408.json  ch-3425.json  ch-3452.json  ch-3580.json  ch-571.json  ch-622.json  ch-741.json  ch-890.json
output/baseline-001/: decision_tree.txt  probability_table.md  raw_results.json  report-gdp-milano-17928-2025.md  strategic_memo.md
output/failures/: 20260311_155436_7.txt  20260311_161105_48.txt  20260311_165155_140.txt  20260311_171125_184.txt  20260311_172224_211.txt
scripts/: ablation_v14b.py  analyze_overnight.py  calibration_experiment.py  capability_test.py  clean_labels.py  monitor.py  overnight_twostep_validation.sh  phase1_data_foundation.py  phase2_baselines.py  phase3_multitask.py  phase4_calibration.py  phase5_citation.py  run_sev_test.sh  train_chunked.py  validate_122b.py  validation_35cases.py  validation_rag.sh
simulations/: run-001.yaml  smoke-1.yaml  smoke-3.yaml  smoke-ch-twostep-3.yaml  smoke-ch-twostep.yaml  validation-ch-rag-6.yaml  validation-ch-rag-7.yaml  validation-ch-smoke.yaml  validation-full.yaml  validation-smoke.yaml
src/athena/: cli.py
src/athena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/athena2/: __init__.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_athena2_baselines.py  test_athena2_bugfixes.py  test_athena2_calibration.py  test_athena2_data.py  test_athena2_features.py  test_athena2_metrics.py  test_athena2_models.py  test_backward_compat.py  test_cli.py  test_context_builders.py  test_embedder.py  test_errors.py  test_game_theory.py  test_generic_graph.py  test_graph.py  test_json_repair.py  test_jurisdiction.py  test_knowledge_config.py  test_knowledge_ingestion.py  test_knowledge_ontology.py  test_knowledge_public_api.py  test_knowledge_queries.py  test_llm.py  test_llm_pipeline.py  test_meta_agents.py  test_migration.py  test_n_party_mock.py  test_orchestrator.py  test_output.py  test_pipeline.py  test_prompts.py  test_rag_embedder.py  test_rag_ingestion.py  test_rag_integration.py  test_rag_retriever.py  test_rag_store.py  test_schema_builder.py  (+5 more)
(+89 files in other folders)
