[project]
name = "athena"
version = "0.1.0"
description = "Adversarial Tactical Hearing & Equilibrium Navigation Agent + Legal Judgment World Model"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-community",
    "mlx-lm",
    "langfuse",
    "pydantic>=2.0",
    "pyyaml",
    "httpx>=0.27",
    "json-repair>=0.30",
    # ATHENA2 core dependencies
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "jsonschema",
    "joblib",
]
kg = [
    "graphiti-core>=0.5",
    "neo4j>=5.0",
    "sentence-transformers>=3.0.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
]
rag = [
    "lancedb>=0.15",
    "sentence-transformers>=3.0.0",
]
validation = [
    "datasets>=2.0,<3.0",
]
# ATHENA2 world model training
worldmodel = [
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.0,<3.0",
    "accelerate>=0.25",
    "networkx>=3.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torchcp>=0.1",             # Class-conditional conformal prediction (NeurIPS 2025)
    "cleanlab>=2.6",            # Confident learning for label noise detection
    # BSCE-GRA, FAMO, SupCon, SAM, R-Drop, LLRD, EMA, SWA/SWAG — implemented in-house
]

[project.scripts]
athena = "athena.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
